--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div id="screen-3" class="screen">
         <p style="margin-top:0">Как найти число?</p>
         <div class="instruction-box">
-            1. Открой чат в <b>Telegram</b>.<br>
+            1. Открой чат в <b>Телеге</b>.<br>
             2. Нажми на 🔍 (Поиск).<br>
             3. Введи слово <span id="target-word" style="color:#ff4d6d"></span>.<br>
             4. Сверху появится количество совпадений.
