Update button text and fix text formatting

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <div id="screen-5" class="screen">
         <canvas id="resultCanvas"></canvas>
-        <button class="btn" onclick="download()">💾 Скачать (800x800)</button>
+        <button class="btn" onclick="download()">💾 Скачать изображение</button>
         <button class="btn" style="background:#ccc" onclick="location.reload()">Заново</button>
     </div>
 </div>
@@ -220,7 +220,7 @@
             ctx.font = "30px 'Comic Relief'";
             
             ctx.fillStyle = "#333";
-            ctx.fillText("... когда за все время вы сказали друг другу", 400, 715);
+            ctx.fillText("...когда за все время вы сказали друг другу", 400, 715);
 
             // Выделенное цветом слово и число
             ctx.fillStyle = "#ff4d6d";
